engine update, icons etc
Added re-processed palette and v7 tables for convenience.

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,13 @@
 *.grp
 *.cfg
 *~
+/src/version-auto.c
+
 /xcode/*.xcodeproj/*
 !/xcode/*.xcodeproj/project.pbxproj
 /xcode/build
-/Makefile.user
-/engineoverrides.mak
+/Makefile.*user
+
 /build
 /tekwar
 /grpfiles.cache
