--- a/Makefile.deps
+++ b/Makefile.deps
@@ -18,5 +18,6 @@ $(SRC)/tektag.$o: $(SRC)/tektag.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(
 $(SRC)/tektxt.$o: $(SRC)/tektxt.c $(build_h) $(EINC)/baselayer.h $(EINC)/cache1d.h $(EINC)/mmulti.h $(INC)/tekwar.h
 $(SRC)/tekver.$o: $(SRC)/tekver.c
 
-$(SRC)/gameres.$o: $(RSRC)/gameres.rc $(INC)/startwin.game.h
-$(SRC)/startwin.game.$o: $(SRC)/startwin.game.c $(EINC)/build.h $(EINC)/winlayer.h $(EINC)/compat.h
+$(SRC)/gameres.$(res): $(SRC)/gameres.rc $(INC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico
+$(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(EINC)/build.h $(EINC)/winlayer.h $(EINC)/compat.h $(INC)/tekwar.h $(INC)/gameres.h
+$(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(EINC)/build.h $(EINC)/baselayer.h $(SRC)/grpscan.h $(INC)/startwin.h $(EINC)/compat.h
