--- a/xcode/Build Editor-Info.plist
+++ b/xcode/Build Editor-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>au.id.jonof.build.tekwar</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -19,10 +19,12 @@
 	<key>LSMinimumSystemVersionByArchitecture</key>
 	<dict>
 		<key>x86_64</key>
-		<string>10.6.0</string>
+		<string>${MACOSX_DEPLOYMENT_TARGET}.0</string>
 	</dict>
-	<key>NSMainNibFile</key>
-	<string>build.osxmain</string>
+	<key>NSHighResolutionCapable</key>
+	<true/>
+	<key>NSHumanReadableCopyright</key>
+	<string>See BUILDLIC.TXT for terms</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
