--- a/Makefile.deps
+++ b/Makefile.deps
@@ -1,10 +1,10 @@
 build_h=$(EINC)/build.h $(EINC)/compat.h
 
 $(SRC)/b5compat.$o: $(SRC)/b5compat.c $(build_h)
-$(SRC)/config.$o: $(SRC)/config.c $(EINC)/compat.h $(EINC)/build.h $(EINC)/osd.h $(EINC)/baselayer.h $(INC)/tekwar.h
+$(SRC)/config.$o: $(SRC)/config.c $(EINC)/build.h $(INC)/tekwar.h $(EINC)/osd.h $(EINC)/scriptfile.h $(EINC)/baselayer.h $(EINC)/winlayer.h
 $(SRC)/tekcdr.$o: $(SRC)/tekcdr.c
 $(SRC)/tekchng.$o: $(SRC)/tekchng.c $(build_h) $(INC)/names.h $(INC)/tekwar.h
-$(SRC)/tekgame.$o: $(SRC)/tekgame.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/cache1d.h $(EINC)/baselayer.h $(EINC)/mmulti.h $(INC)/tekwar.h $(SRC)/tekver.c
+$(SRC)/tekgame.$o: $(SRC)/tekgame.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/cache1d.h $(EINC)/baselayer.h $(EINC)/mmulti.h $(INC)/tekwar.h $(SRC)/tekver.c $(INC)/startwin.h $(INC)/version.h
 $(SRC)/tekgun.$o: $(SRC)/tekgun.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/mmulti.h $(INC)/tekwar.h
 $(SRC)/tekldsv.$o: $(SRC)/tekldsv.c $(build_h) $(INC)/names.h $(EINC)/mmulti.h $(INC)/tekwar.h
 $(SRC)/tekmap.$o: $(SRC)/tekmap.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(INC)/tekwar.h
@@ -17,7 +17,12 @@ $(SRC)/tekstat.$o: $(SRC)/tekstat.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h 
 $(SRC)/tektag.$o: $(SRC)/tektag.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/mmulti.h $(INC)/tekwar.h
 $(SRC)/tektxt.$o: $(SRC)/tektxt.c $(build_h) $(EINC)/baselayer.h $(EINC)/cache1d.h $(EINC)/mmulti.h $(INC)/tekwar.h
 $(SRC)/tekver.$o: $(SRC)/tekver.c
+$(SRC)/version.$o: $(SRC)/version.c
+$(SRC)/version-auto.$o: $(SRC)/version-auto.c
 
-$(SRC)/gameres.$(res): $(SRC)/gameres.rc $(INC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico
-$(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(EINC)/build.h $(EINC)/winlayer.h $(EINC)/compat.h $(INC)/tekwar.h $(INC)/gameres.h
-$(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(EINC)/build.h $(EINC)/baselayer.h $(SRC)/grpscan.h $(INC)/startwin.h $(EINC)/compat.h
+$(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(EINC)/build.h $(EINC)/winlayer.h $(EINC)/compat.h $(INC)/startwin.h $(INC)/gameres.h
+$(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(EINC)/build.h $(EINC)/baselayer.h $(EINC)/compat.h $(INC)/startwin.h
+
+$(SRC)/gameres.$(res): $(SRC)/gameres.rc $(INC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
+$(SRC)/buildres.$(res): $(SRC)/buildres.rc $(INC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
+
