add audio using jfaudiolib
Yes, yes, GPL, yes. We're so far off the reservation with this little
endeavour already.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "jfbuild"]
 	path = jfbuild
 	url = ../jfbuild.git
+[submodule "jfaudiolib"]
+	path = jfaudiolib
+	url = ../jfaudiolib.git
