--- a/src/gameres.rc
+++ b/src/gameres.rc
@@ -45,6 +45,11 @@ FONT 8, "MS Shell Dlg", 0, 0, 1
     LTEXT           "&Video mode:", IDC_STATIC, 7, 9, 52, 9, NOT WS_GROUP | SS_LEFT, WS_EX_LEFT
     COMBOBOX        IDC_VMODE3D, 75, 7, 95, 99, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
     AUTOCHECKBOX    "&Fullscreen", IDC_FULLSCREEN, 179, 8, 49, 10, WS_TABSTOP, WS_EX_LEFT
+    LTEXT           "S&ound quality:", IDC_STATIC, 7, 27, 52, 9, NOT WS_GROUP | SS_LEFT, WS_EX_LEFT
+    COMBOBOX        IDC_SOUNDQUALITY, 75, 25, 95, 99, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
+    LTEXT           "Input devices:", IDC_STATIC, 7, 45, 52, 9, WS_CHILD | WS_VISIBLE, WS_EX_LEFT
+    AUTOCHECKBOX    "Mo&use", IDC_USEMOUSE, 75, 45, 40, 8, WS_TABSTOP, WS_EX_LEFT
+    AUTOCHECKBOX    "&Joystick", IDC_USEJOYSTICK, 115, 45, 40, 8, WS_TABSTOP, WS_EX_LEFT
 }
 
 
