--- a/Makefile.deps
+++ b/Makefile.deps
@@ -11,7 +11,7 @@ $(SRC)/tekmap.$o: $(SRC)/tekmap.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(
 $(SRC)/tekmsc.$o: $(SRC)/tekmsc.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/baselayer.h $(EINC)/mmulti.h $(INC)/tekwar.h
 $(SRC)/tekprep.$o: $(SRC)/tekprep.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/baselayer.h $(EINC)/mmulti.h $(EINC)/cache1d.h $(INC)/tekwar.h
 $(SRC)/teksmk.$o: $(SRC)/teksmk.c $(build_h) $(EINC)/compat.h $(EINC)/baselayer.h $(EINC)/pragmas.h $(EINC)/cache1d.h $(INC)/tekwar.h $(LIBSMACKERSRC)/smacker.h
-$(SRC)/teksnd.$o: $(SRC)/teksnd.c $(EINC)/compat.h
+$(SRC)/teksnd.$o: $(SRC)/teksnd.c $(build_h) $(EINC)/cache1d.h $(EINC)/pragmas.h $(INC)/tekwar.h $(AUDIOLIBROOT)/include/fx_man.h
 $(SRC)/tekspr.$o: $(SRC)/tekspr.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(INC)/tekwar.h
 $(SRC)/tekstat.$o: $(SRC)/tekstat.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/mmulti.h $(EINC)/cache1d.h $(INC)/tekwar.h
 $(SRC)/tektag.$o: $(SRC)/tektag.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/mmulti.h $(INC)/tekwar.h
@@ -22,6 +22,12 @@ $(SRC)/version-auto.$o: $(SRC)/version-auto.c
 
 $(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(EINC)/build.h $(EINC)/winlayer.h $(EINC)/compat.h $(INC)/startwin.h $(INC)/gameres.h
 $(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(EINC)/build.h $(EINC)/baselayer.h $(EINC)/compat.h $(INC)/startwin.h
+
+# Derived source files from art assets
+$(RSRC)/startgtk_game_gresource.c: $(RSRC)/startgtk_game.gresource.xml $(RSRC)/game.png $(RSRC)/startgtk_game.glade
+$(RSRC)/startgtk_game_gresource.h: $(RSRC)/startgtk_game.gresource.xml
+$(RSRC)/sdlappicon_game.c: $(RSRC)/game.png
+$(RSRC)/sdlappicon_game.$o: $(RSRC)/sdlappicon_game.c
 
 $(SRC)/gameres.$(res): $(SRC)/gameres.rc $(INC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
 $(SRC)/buildres.$(res): $(SRC)/buildres.rc $(INC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
