--- a/Makefile.deps
+++ b/Makefile.deps
@@ -1,29 +1,29 @@
-build_h=$(EINC)/build.h $(EINC)/compat.h
+build_h=$(ENGINEINC)/build.h $(ENGINEINC)/compat.h
 
 $(SRC)/b5compat.$o: $(SRC)/b5compat.c $(build_h)
-$(SRC)/config.$o: $(SRC)/config.c $(EINC)/build.h $(INC)/tekwar.h $(EINC)/osd.h $(EINC)/scriptfile.h $(EINC)/baselayer.h $(EINC)/winlayer.h
+$(SRC)/config.$o: $(SRC)/config.c $(ENGINEINC)/build.h $(SRC)/tekwar.h $(ENGINEINC)/osd.h $(ENGINEINC)/scriptfile.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/winlayer.h
 $(SRC)/tekcdr.$o: $(SRC)/tekcdr.c
-$(SRC)/tekchng.$o: $(SRC)/tekchng.c $(build_h) $(INC)/names.h $(INC)/tekwar.h
-$(SRC)/tekgame.$o: $(SRC)/tekgame.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/cache1d.h $(EINC)/baselayer.h $(EINC)/mmulti.h $(INC)/tekwar.h $(SRC)/tekver.c $(INC)/startwin.h $(INC)/version.h
-$(SRC)/tekgun.$o: $(SRC)/tekgun.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/mmulti.h $(INC)/tekwar.h
-$(SRC)/tekldsv.$o: $(SRC)/tekldsv.c $(build_h) $(INC)/names.h $(EINC)/mmulti.h $(INC)/tekwar.h
-$(SRC)/tekmap.$o: $(SRC)/tekmap.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(INC)/tekwar.h
-$(SRC)/tekmsc.$o: $(SRC)/tekmsc.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/baselayer.h $(EINC)/mmulti.h $(INC)/tekwar.h
-$(SRC)/tekprep.$o: $(SRC)/tekprep.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/baselayer.h $(EINC)/mmulti.h $(EINC)/cache1d.h $(INC)/tekwar.h
-$(SRC)/teksmk.$o: $(SRC)/teksmk.c $(build_h) $(EINC)/compat.h $(EINC)/baselayer.h $(EINC)/pragmas.h $(EINC)/cache1d.h $(INC)/tekwar.h  $(AUDIOLIBROOT)/include/fx_man.h $(LIBSMACKERSRC)/smacker.h
-$(SRC)/teksnd.$o: $(SRC)/teksnd.c $(build_h) $(EINC)/cache1d.h $(EINC)/pragmas.h $(INC)/tekwar.h $(AUDIOLIBROOT)/include/fx_man.h
-$(SRC)/tekspr.$o: $(SRC)/tekspr.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(INC)/tekwar.h
-$(SRC)/tekstat.$o: $(SRC)/tekstat.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/mmulti.h $(EINC)/cache1d.h $(INC)/tekwar.h
-$(SRC)/tektag.$o: $(SRC)/tektag.c $(build_h) $(INC)/names.h $(EINC)/pragmas.h $(EINC)/mmulti.h $(INC)/tekwar.h
-$(SRC)/tektxt.$o: $(SRC)/tektxt.c $(build_h) $(EINC)/baselayer.h $(EINC)/cache1d.h $(EINC)/mmulti.h $(INC)/tekwar.h
+$(SRC)/tekchng.$o: $(SRC)/tekchng.c $(build_h) $(SRC)/names.h $(SRC)/tekwar.h
+$(SRC)/tekgame.$o: $(SRC)/tekgame.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/cache1d.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/mmulti.h $(SRC)/tekwar.h $(SRC)/tekver.c $(SRC)/startwin.h $(SRC)/version.h
+$(SRC)/tekgun.$o: $(SRC)/tekgun.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/mmulti.h $(SRC)/tekwar.h
+$(SRC)/tekldsv.$o: $(SRC)/tekldsv.c $(build_h) $(SRC)/names.h $(ENGINEINC)/mmulti.h $(SRC)/tekwar.h
+$(SRC)/tekmap.$o: $(SRC)/tekmap.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(SRC)/tekwar.h
+$(SRC)/tekmsc.$o: $(SRC)/tekmsc.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/mmulti.h $(SRC)/tekwar.h
+$(SRC)/tekprep.$o: $(SRC)/tekprep.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/mmulti.h $(ENGINEINC)/cache1d.h $(SRC)/tekwar.h
+$(SRC)/teksmk.$o: $(SRC)/teksmk.c $(build_h) $(ENGINEINC)/compat.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/cache1d.h $(SRC)/tekwar.h  $(AUDIOLIBROOT)/include/fx_man.h $(LIBSMACKERSRC)/smacker.h
+$(SRC)/teksnd.$o: $(SRC)/teksnd.c $(build_h) $(ENGINEINC)/cache1d.h $(ENGINEINC)/pragmas.h $(SRC)/tekwar.h $(AUDIOLIBROOT)/include/fx_man.h
+$(SRC)/tekspr.$o: $(SRC)/tekspr.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(SRC)/tekwar.h
+$(SRC)/tekstat.$o: $(SRC)/tekstat.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/mmulti.h $(ENGINEINC)/cache1d.h $(SRC)/tekwar.h
+$(SRC)/tektag.$o: $(SRC)/tektag.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/mmulti.h $(SRC)/tekwar.h
+$(SRC)/tektxt.$o: $(SRC)/tektxt.c $(build_h) $(ENGINEINC)/baselayer.h $(ENGINEINC)/cache1d.h $(ENGINEINC)/mmulti.h $(SRC)/tekwar.h
 $(SRC)/tekver.$o: $(SRC)/tekver.c
 $(SRC)/version.$o: $(SRC)/version.c
 $(SRC)/version-auto.$o: $(SRC)/version-auto.c
 
-$(SRC)/bstub.$o: $(SRC)/bstub.c $(build_h) $(EINC)/editor.h $(EINC)/pragmas.h $(EINC)/baselayer.h $(EINC)/cache1d.h $(INC)/names.h
+$(SRC)/bstub.$o: $(SRC)/bstub.c $(build_h) $(ENGINEINC)/editor.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/cache1d.h $(SRC)/names.h
 
-$(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(EINC)/build.h $(EINC)/winlayer.h $(EINC)/compat.h $(INC)/startwin.h $(INC)/gameres.h
-$(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(EINC)/build.h $(EINC)/baselayer.h $(EINC)/compat.h $(INC)/startwin.h
+$(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(ENGINEINC)/build.h $(ENGINEINC)/winlayer.h $(ENGINEINC)/compat.h $(SRC)/startwin.h $(SRC)/gameres.h
+$(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(ENGINEINC)/build.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/compat.h $(SRC)/startwin.h
 
 # Derived source files from art assets
 $(RSRC)/startgtk_game_gresource.c: $(RSRC)/startgtk_game.gresource.xml $(RSRC)/game.png $(RSRC)/startgtk_game.glade
@@ -31,6 +31,6 @@ $(RSRC)/startgtk_game_gresource.h: $(RSRC)/startgtk_game.gresource.xml
 $(RSRC)/sdlappicon_game.c: $(RSRC)/game.png
 $(RSRC)/sdlappicon_game.$o: $(RSRC)/sdlappicon_game.c
 
-$(SRC)/gameres.$(res): $(SRC)/gameres.rc $(INC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
-$(SRC)/buildres.$(res): $(SRC)/buildres.rc $(INC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
+$(SRC)/gameres.$(res): $(SRC)/gameres.rc $(SRC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
+$(SRC)/buildres.$(res): $(SRC)/buildres.rc $(ENGINEINC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
 
