--- a/Makefile.msvc
+++ b/Makefile.msvc
@@ -1,20 +1,17 @@
 # TekWar Makefile for Microsoft Make
 
-RELEASE=1
-
 # Engine options
 #  USE_POLYMOST   - enables Polymost renderer
 #  USE_OPENGL     - enables OpenGL support in Polymost
 #     Define as 0 to disable OpenGL
-#     Define as 1 or 2 for GL 2.1 profile
-#  USE_ASM        - enables the use of assembly code
+#     Define as 1 (or 2) for GL 2.0/2.1 profile
+#     Define as 3 for GL 3.2 Core profile
+#  USE_ASM        - enables the use of assembly code if supported
 USE_POLYMOST=1
 USE_OPENGL=1
 USE_ASM=1
 
-EROOT=jfbuild
-AUDIOLIBROOT=jfaudiolib
-LIBSMACKERSRC=libsmacker
+RELEASE=1
 
 # Create Makefile.msvcuser yourself to provide your own overrides
 # for configurable values
@@ -22,68 +19,50 @@ LIBSMACKERSRC=libsmacker
 !include Makefile.msvcuser
 !endif
 
+ENGINEROOT=jfbuild
+ENGINEINC=$(ENGINEROOT)\include
 SRC=src
 RSRC=rsrc
-EINC=$(EROOT)\include
-ELIB=$(EROOT)\src
-INC=$(SRC)
-
-o=obj
-res=res
-
-ENGINELIB=engine.lib
-EDITORLIB=build.lib
-
-flags_cl=
-flags_rc=
-!if "$(PLATFORM)" == "X64"
-flags_rc=/d_M_AMD64
-USE_ASM=0
-!elseif "$(PLATFORM)" == "ARM"
-# Some day, perhaps.
-USE_ASM=0
-!else
-flags_cl=/arch:IA32
-!endif
-
-!if $(RELEASE)
-# release options
-flags_cl=$(flags_cl) /Ox
-flags_link=/RELEASE
-!else
-# debugging options
-flags_cl=$(flags_cl) /Ot /Z7
-flags_link=/DEBUG
-!endif
-
-ENGINEOPTS=/DRENDERTYPEWIN=1
-!if $(USE_POLYMOST)
-ENGINEOPTS=$(ENGINEOPTS) /DUSE_POLYMOST=$(USE_POLYMOST)
-!endif
-!if $(USE_OPENGL)
-ENGINEOPTS=$(ENGINEOPTS) /DUSE_OPENGL=$(USE_OPENGL)
-!endif
-!if $(USE_ASM)
-ENGINEOPTS=$(ENGINEOPTS) /DUSE_ASM=$(USE_ASM)
-!endif
-
-!include $(AUDIOLIBROOT)/Makefile.msvcshared
+LIBSMACKERSRC=libsmacker
+AUDIOLIBROOT=jfaudiolib
 
 CC=cl
 RC=rc
 LINK=link
-OURCFLAGS=/nologo /MD /J $(flags_cl)  \
-	/I$(INC) /I$(EINC) /I$(AUDIOLIBROOT)\include /I$(LIBSMACKERSRC) \
-	$(ENGINEOPTS)
-LIBS=user32.lib gdi32.lib shell32.lib ws2_32.lib comctl32.lib comdlg32.lib uxtheme.lib xinput9_1_0.lib
-LINKFLAGS=/opt:ref /nologo $(flags_link) /LIBPATH:$(AUDIOLIBROOT)\third-party\msvc\lib$(PLATFORM)
-RFLAGS=/nologo /i$(EINC) /i$(SRC) $(flags_rc)
-EXESUFFIX=.exe
 
-LIBSMACKEROBJ= \
-	$(LIBSMACKERSRC)\smacker.$o \
-	$(LIBSMACKERSRC)\smk_bitstream.$o \
-	$(LIBSMACKERSRC)\smk_hufftree.$o
+OURCFLAGS=/nologo /MD /Zl
+OURCXXFLAGS=/nologo /MD /Zl /EHsc
+OURCPPFLAGS=/I$(SRC) /I$(ENGINEINC) /I$(AUDIOLIBROOT)\include /I$(LIBSMACKERSRC)
+OURLINKFLAGS=/opt:ref /nologo
+OURRFLAGS=/nologo /i$(SRC) /i$(ENGINEINC)
+OURLIBS=msvcrt.lib
+
+!if $(RELEASE)
+# release options
+OURCFLAGS=$(OURCFLAGS) /Ox
+OURCXXFLAGS=$(OURCXXFLAGS) /Ox
+OURLINKFLAGS=$(OURLINKFLAGS) /RELEASE
+!else
+# debugging options
+OURCFLAGS=$(OURCFLAGS) /Ot /Z7
+OURCXXFLAGS=$(OURXXCFLAGS) /Ot /Z7
+OURLINKFLAGS=$(OURLINKFLAGS) /DEBUG
+!endif
+
+o=obj
+res=res
+
+!include $(ENGINEROOT)/Makefile.msvcshared
+
+OURCFLAGS=$(OURCFLAGS) $(BUILDCFLAGS)
+OURCXXFLAGS=$(OURCXXFLAGS) $(BUILDCXXFLAGS)
+OURCPPFLAGS=$(OURCPPFLAGS) $(BUILDCPPFLAGS)
+OURLIBS=$(OURLIBS) $(BUILDLIBS)
+OURRFLAGS=$(OURRFLAGS) $(BUILDRFLAGS)
+
+!include $(AUDIOLIBROOT)/Makefile.msvcshared
+
+OURLINKFLAGS=$(OURLINKFLAGS) /LIBPATH:$(AUDIOLIBROOT)\third-party\msvc\lib$(PLATFORM)
 
 GAMEOBJS= \
 	$(SRC)\b5compat.$o \
@@ -104,8 +83,12 @@ GAMEOBJS= \
 	$(SRC)\tektxt.$o \
 	$(SRC)\tekver.$o \
 	$(SRC)\gameres.$(res) \
-	$(SRC)\startwin_game.$o \
-	$(LIBSMACKEROBJ)
+	$(SRC)\startwin_game.$o
+
+GAMEOBJS=$(GAMEOBJS) \
+	$(LIBSMACKERSRC)\smacker.$o \
+	$(LIBSMACKERSRC)\smk_bitstream.$o \
+	$(LIBSMACKERSRC)\smk_hufftree.$o
 
 EDITOROBJS=$(SRC)\bstub.$o \
 	$(SRC)\buildres.$(res)
@@ -120,60 +103,54 @@ EDITOROBJS=$(EDITOROBJS) $(SRC)\version.$o
 !endif
 
 # RULES
-{$(LIBSMACKERSRC)}.c{$(LIBSMACKERSRC)}.$o:
-	$(CC) /c $(CFLAGS) $(OURCFLAGS) /Fo$@ $<
-
 {$(SRC)}.c{$(SRC)}.$o:
-	$(CC) /c $(CFLAGS) $(OURCFLAGS) /Fo$@ $<
-
-{$(SRC)}.cpp{$(SRC)}.$o:
-	$(CC) /c $(CFLAGS) $(OURCFLAGS) /Fo$@ $<
+	$(CC) /TC /c $(CPPFLAGS) $(OURCPPFLAGS) $(CFLAGS) $(OURCFLAGS) /Fo$@ $<
 
 {$(SRC)}.rc{$(SRC)}.$(res):
-	$(RC) $(RFLAGS) /fo$@ /r $<
+	$(RC) $(OURRFLAGS) /fo$@ /r $<
 
+{$(LIBSMACKERSRC)}.c{$(LIBSMACKERSRC)}.$o:
+	$(CC) /TC /c $(CPPFLAGS) $(OURCPPFLAGS) $(CFLAGS) $(OURCFLAGS) /Fo$@ $<
 
 # TARGETS
 all: tekwar$(EXESUFFIX) build$(EXESUFFIX) ;
 
-tekwar$(EXESUFFIX): $(GAMEOBJS) $(ELIB)\$(ENGINELIB) $(AUDIOLIBROOT)\$(JFAUDIOLIB)
-	$(LINK) /OUT:$@ /SUBSYSTEM:WINDOWS $(LINKFLAGS) /MAP $** $(LIBS) $(JFAUDIOLIB_LINKFLAGS) msvcrt.lib
+tekwar$(EXESUFFIX): $(GAMEOBJS) $(ENGINEROOT)\$(ENGINELIB) $(AUDIOLIBROOT)\$(JFAUDIOLIB)
+	$(LINK) /OUT:$@ /SUBSYSTEM:WINDOWS $(LINKFLAGS) $(OURLINKFLAGS) $** $(JFAUDIOLIB_LINKFLAGS) $(OURLIBS)
 
-build$(EXESUFFIX): $(EDITOROBJS) $(ELIB)\$(ENGINELIB) $(ELIB)\$(EDITORLIB)
-	$(LINK) /OUT:$@ /SUBSYSTEM:WINDOWS $(LINKFLAGS) /MAP $** $(LIBS) msvcrt.lib
+build$(EXESUFFIX): $(EDITOROBJS) $(ENGINEROOT)\$(ENGINELIB) $(ENGINEROOT)\$(EDITORLIB)
+	$(LINK) /OUT:$@ /SUBSYSTEM:WINDOWS $(LINKFLAGS) $(OURLINKFLAGS) $** $(OURLIBS)
 
+$(ENGINEROOT)\$(ENGINELIB) $(ENGINEROOT)\$(EDITORLIB): ALWAYSBUILD
+	cd "$(@D)"
+	$(MAKE) /nologo /f Makefile.msvc /$(MAKEFLAGS) USE_POLYMOST=$(USE_POLYMOST) USE_OPENGL=$(USE_OPENGL) USE_ASM=$(USE_ASM) RELEASE=$(RELEASE) $(@F)
+	cd "$(MAKEDIR)"
+
+$(AUDIOLIBROOT)\$(JFAUDIOLIB): ALWAYSBUILD
+	cd "$(@D)"
+	$(MAKE) /nologo /f Makefile.msvc /$(MAKEFLAGS) RELEASE=$(RELEASE) $(@F)
+	cd "$(MAKEDIR)"
+
+$(SRC)\version-auto.c: ALWAYSBUILD
+	cmd /c tools\generateversion.cmd > $@
+
+ALWAYSBUILD: ;
+
+# DEPENDENCIES
 !include Makefile.deps
 
-enginelib editorlib: AlwaysBuild
-	cd "$(EROOT)"
-	$(MAKE) /f Makefile.msvc /$(MAKEFLAGS) USE_POLYMOST=$(USE_POLYMOST) USE_OPENGL=$(USE_OPENGL) USE_ASM=$(USE_ASM) $@
-	cd "$(MAKEDIR)"
-
-jfaudiolib: AlwaysBuild
-	cd "$(AUDIOLIBROOT)"
-	$(MAKE) /f Makefile.msvc /$(MAKEFLAGS) RELEASE=$(RELEASE)
-	cd "$(MAKEDIR)"
-
-$(SRC)\version-auto.c: AlwaysBuild
-	powershell tools\generateversion.ps1 > $@
-
-AlwaysBuild: ;
-$(ELIB)\$(EDITORLIB): editorlib ;
-$(ELIB)\$(ENGINELIB): enginelib ;
-$(AUDIOLIBROOT)\$(JFAUDIOLIB): jfaudiolib ;
-
 # PHONIES
-clean:
+clean::
 	-del /q $(GAMEOBJS) $(EDITOROBJS)
-	cd "$(EROOT)"
-	$(MAKE) /f Makefile.msvc $@
-	cd "$(MAKEDIR)"
-	cd "$(AUDIOLIBROOT)"
-	$(MAKE) /f Makefile.msvc $@
+veryclean:: clean
+	-del /q tekwar$(EXESUFFIX) build$(EXESUFFIX)
+
+clean veryclean::
+	cd "$(ENGINEROOT)"
+	-$(MAKE) /nologo /f Makefile.msvc $@
 	cd "$(MAKEDIR)"
 
-veryclean: clean
-	-del /q tekwar$(EXESUFFIX) build$(EXESUFFIX)
-	cd "$(EROOT)"
-	$(MAKE) /f Makefile.msvc $@
+clean::
+	cd "$(AUDIOLIBROOT)"
+	-$(MAKE) /nologo /f Makefile.msvc $@
 	cd "$(MAKEDIR)"
