--- a/Makefile.deps
+++ b/Makefile.deps
@@ -17,6 +17,7 @@ $(SRC)/tekstat.$o: $(SRC)/tekstat.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragm
 $(SRC)/tektag.$o: $(SRC)/tektag.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/mmulti.h $(SRC)/tekwar.h
 $(SRC)/tektxt.$o: $(SRC)/tektxt.c $(build_h) $(ENGINEINC)/baselayer.h $(ENGINEINC)/cache1d.h $(ENGINEINC)/mmulti.h $(SRC)/tekwar.h
 $(SRC)/tekver.$o: $(SRC)/tekver.c
+$(SRC)/datascan.$o: $(SRC)/datascan.c $(ENGINEINC)/compat.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/cache1d.h $(ENGINEINC)/build.h $(SRC)/datascan.h
 $(SRC)/version.$o: $(SRC)/version.c
 $(SRC)/version-auto.$o: $(SRC)/version-auto.c
 
@@ -30,6 +31,8 @@ $(RSRC)/startgtk_game_gresource.c: $(RSRC)/startgtk_game.gresource.xml $(RSRC)/g
 $(RSRC)/startgtk_game_gresource.h: $(RSRC)/startgtk_game.gresource.xml
 $(RSRC)/sdlappicon_game.c: $(RSRC)/game.png
 $(RSRC)/sdlappicon_game.$o: $(RSRC)/sdlappicon_game.c
+$(RSRC)/palette.c: $(RSRC)/palette.dat
+$(RSRC)/palette.$o: $(RSRC)/palette.c
 
 $(SRC)/gameres.$(res): $(SRC)/gameres.rc $(SRC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
 $(SRC)/buildres.$(res): $(SRC)/buildres.rc $(ENGINEINC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
