--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 /xcode/*.xcodeproj/*
 !/xcode/*.xcodeproj/project.pbxproj
 /xcode/build
+/xcode/Signing.xcconfig
+/xcode/Version.xcconfig
 /Makefile.*user
 
 /tekwar
