--- a/Makefile.msvc
+++ b/Makefile.msvc
@@ -88,9 +88,7 @@ GAMEOBJS= \
 	$(SRC)\startwin_game.$o
 
 GAMEOBJS=$(GAMEOBJS) \
-	$(LIBSMACKERSRC)\smacker.$o \
-	$(LIBSMACKERSRC)\smk_bitstream.$o \
-	$(LIBSMACKERSRC)\smk_hufftree.$o
+	$(LIBSMACKERSRC)\smacker_jftekwar.$o
 
 EDITOROBJS=$(SRC)\bstub.$o \
 	$(SRC)\buildres.$(res)
