--- a/Makefile.deps
+++ b/Makefile.deps
@@ -1,7 +1,7 @@
 build_h=$(ENGINEINC)/build.h $(ENGINEINC)/compat.h
 
 $(SRC)/b5compat.$o: $(SRC)/b5compat.c $(build_h)
-$(SRC)/config.$o: $(SRC)/config.c $(ENGINEINC)/build.h $(SRC)/tekwar.h $(ENGINEINC)/osd.h $(ENGINEINC)/scriptfile.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/winlayer.h
+$(SRC)/config.$o: $(SRC)/config.c $(ENGINEINC)/build.h $(SRC)/tekwar.h $(ENGINEINC)/osd.h $(ENGINEINC)/scriptfile.h $(ENGINEINC)/baselayer.h
 $(SRC)/tekcdr.$o: $(SRC)/tekcdr.c
 $(SRC)/tekchng.$o: $(SRC)/tekchng.c $(build_h) $(SRC)/names.h $(SRC)/tekwar.h
 $(SRC)/tekgame.$o: $(SRC)/tekgame.c $(build_h) $(SRC)/names.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/cache1d.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/mmulti.h $(ENGINEINC)/osd.h $(SRC)/tekwar.h $(SRC)/tekver.c $(SRC)/startwin.h $(SRC)/version.h
@@ -28,11 +28,13 @@ $(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(ENGINEINC)/build.h $(ENGINEINC
 $(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(ENGINEINC)/build.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/compat.h $(SRC)/startwin.h
 
 # Derived source files from art assets
-$(RSRC)/startgtk_game_gresource.c: $(RSRC)/startgtk_game.gresource.xml $(RSRC)/game.png $(RSRC)/startgtk_game.glade
-$(RSRC)/startgtk_game_gresource.h: $(RSRC)/startgtk_game.gresource.xml
-$(RSRC)/sdlappicon_game.c: $(RSRC)/game.png
-$(RSRC)/sdlappicon_game.$o: $(RSRC)/sdlappicon_game.c
+$(RSRC)/startgtk_game_gresource.c $(RSRC)/startgtk_game_gresource.h: $(RSRC)/startgtk_game.gresource.xml $(RSRC)/game.png $(RSRC)/startgtk_game.glade
+$(RSRC)/startgtk_build_gresource.c $(RSRC)/startgtk_build_gresource.h: $(RSRC)/startgtk_build.gresource.xml $(RSRC)/build.png $(RSRC)/startgtk_build.glade
+$(RSRC)/game_bmp.c: $(RSRC)/game.bmp
+$(RSRC)/game_bmp.$o: $(RSRC)/game_bmp.c
+$(RSRC)/build_bmp.c: $(RSRC)/build.bmp
+$(RSRC)/build_bmp.$o: $(RSRC)/build_bmp.c
 
-$(SRC)/gameres.$(res): $(SRC)/gameres.rc $(SRC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
-$(SRC)/buildres.$(res): $(SRC)/buildres.rc $(ENGINEINC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
+$(SRC)/gameres.$(res): $(SRC)/gameres.rc $(SRC)/gameres.h $(RSRC)/startwin_game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
+$(SRC)/buildres.$(res): $(SRC)/buildres.rc $(ENGINEINC)/buildres.h $(RSRC)/startwin_build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
 
